--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <div class="header">
-          
+        <div class="logo"><img src="horse.jpg"></div>
+        <div class="brand"><a href="#">Global Store</a></div>
+        <div class="buttons">
+            <div class="login"><a href="#" >Login</a></div>
+            <div class="register"><a href="#">Register</a></div>
+        </div>  
     </div>
     <div class="main">
         <div class="sidebar">
@@ -16,16 +21,41 @@
                 <a href="#">Notebook</a>
             </div>
             <div class="sidebar__item">
-                <a href="#">Notebook</a>
+                <a href="#">Periphery</a>
             </div>
             <div class="sidebar__item">
-                <a href="#">Notebook</a>
+                <a href="#">Accessories</a>
             </div>
             <div class="sidebar__item">
-                <a href="#">Notebook</a>
+                <a href="#">Network</a>
             </div>
         </div>
         <div class="content">
+            <div class="content__item">
+                <div><img class="content__item--img" src="img/lenovo_ideapad_100_1_1.jpg"></div>
+                <div class="col">
+                    <div class="content__item--price">12999 грн</div>
+                    <div class="content__item--about">Диагональ: 15,6''<br>Разр.: 1366x768 HD<br>Покрытие:Глянцевое<br>ЦП: Intel Core i3<br>ОЗУ: 8ГБ</div>
+                    <div class="content__item--buy"><a href="#" >КУПИТЬ</a></div>
+                </div>
+            </div>
+            <div class="content__item">
+                <div><img class="content__item--img" src="img/lenovo_ideapad_110s_11ibr__80wg002rra__1.jpg"></div>
+                <div class="col">
+                    <div class="content__item--price">6399 грн</div>
+                    <div class="content__item--about">Диагональ: 11,6''<br>Разр.: 1366x768 HD<br>Покрытие:Глянцевое<br>ЦП: Intel Celeron<br>ОЗУ: 2ГБ</div>
+                    <div class="content__item--buy"><a href="#" >КУПИТЬ</a></div>
+                </div>
+            </div>
+            <div class="content__item">
+                <div><img class="content__item--img" src="img/lenovo_ideapad_110s-11ibr_80wg002qra_blue.jpg"></div>
+                <div class="col">
+                    <div class="content__item--price">11899 грн</div>
+                    <div class="content__item--about">Диагональ: 15,6''<br>Разр.: 1366x768 HD<br>Покрытие:Глянцевое<br>ЦП: Intel Core i3<br>ОЗУ: 4ГБ</div>
+                    <div class="content__item--buy"><a href="#" >КУПИТЬ</a></div>
+                </div>
+            </div>
+            
 
         </div>
     </div>
